// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectStories should collect stories from StoryBook: ViaStoriesJson 1`] = `
{
  "stories": [
    {
      "id": "example-introduction--page",
      "importPath": "./stories/Introduction.stories.mdx",
      "name": "Page",
      "title": "Example/Introduction",
    },
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "name": "Primary",
      "title": "Example/Button",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "name": "Secondary",
      "title": "Example/Button",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "name": "Large",
      "title": "Example/Button",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "name": "Small",
      "title": "Example/Button",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "name": "Logged In",
      "title": "Example/Header",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "name": "Logged Out",
      "title": "Example/Header",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "name": "Logged In",
      "title": "Example/Page",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "name": "Logged Out",
      "title": "Example/Page",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaStoriesJson 2`] = `
{
  "stories": [
    {
      "id": "configure-your-project--docs",
      "importPath": "./src/stories/Configure.mdx",
      "kind": "Configure your project",
      "name": "Docs",
      "parameters": {
        "__id": "configure-your-project--docs",
        "docsOnly": true,
        "fileName": "./src/stories/Configure.mdx",
      },
      "storiesImports": [],
      "story": "Docs",
      "tags": [
        "unattached-mdx",
        "docs",
      ],
      "title": "Configure your project",
    },
    {
      "id": "example-button--docs",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "name": "Docs",
      "parameters": {
        "__id": "example-button--docs",
        "docsOnly": true,
        "fileName": "./src/stories/Button.stories.ts",
      },
      "storiesImports": [],
      "story": "Docs",
      "tags": [
        "autodocs",
        "docs",
      ],
      "title": "Example/Button",
    },
    {
      "id": "example-button--primary",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "name": "Primary",
      "parameters": {
        "__id": "example-button--primary",
        "docsOnly": false,
        "fileName": "./src/stories/Button.stories.ts",
      },
      "story": "Primary",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Button",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "name": "Secondary",
      "parameters": {
        "__id": "example-button--secondary",
        "docsOnly": false,
        "fileName": "./src/stories/Button.stories.ts",
      },
      "story": "Secondary",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Button",
    },
    {
      "id": "example-button--large",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "name": "Large",
      "parameters": {
        "__id": "example-button--large",
        "docsOnly": false,
        "fileName": "./src/stories/Button.stories.ts",
      },
      "story": "Large",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Button",
    },
    {
      "id": "example-button--small",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "name": "Small",
      "parameters": {
        "__id": "example-button--small",
        "docsOnly": false,
        "fileName": "./src/stories/Button.stories.ts",
      },
      "story": "Small",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Button",
    },
    {
      "id": "example-header--docs",
      "importPath": "./src/stories/Header.stories.ts",
      "kind": "Example/Header",
      "name": "Docs",
      "parameters": {
        "__id": "example-header--docs",
        "docsOnly": true,
        "fileName": "./src/stories/Header.stories.ts",
      },
      "storiesImports": [],
      "story": "Docs",
      "tags": [
        "autodocs",
        "docs",
      ],
      "title": "Example/Header",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./src/stories/Header.stories.ts",
      "kind": "Example/Header",
      "name": "Logged In",
      "parameters": {
        "__id": "example-header--logged-in",
        "docsOnly": false,
        "fileName": "./src/stories/Header.stories.ts",
      },
      "story": "Logged In",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Header",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./src/stories/Header.stories.ts",
      "kind": "Example/Header",
      "name": "Logged Out",
      "parameters": {
        "__id": "example-header--logged-out",
        "docsOnly": false,
        "fileName": "./src/stories/Header.stories.ts",
      },
      "story": "Logged Out",
      "tags": [
        "autodocs",
        "story",
      ],
      "title": "Example/Header",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./src/stories/Page.stories.ts",
      "kind": "Example/Page",
      "name": "Logged Out",
      "parameters": {
        "__id": "example-page--logged-out",
        "docsOnly": false,
        "fileName": "./src/stories/Page.stories.ts",
      },
      "story": "Logged Out",
      "tags": [
        "story",
      ],
      "title": "Example/Page",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./src/stories/Page.stories.ts",
      "kind": "Example/Page",
      "name": "Logged In",
      "parameters": {
        "__id": "example-page--logged-in",
        "docsOnly": false,
        "fileName": "./src/stories/Page.stories.ts",
      },
      "story": "Logged In",
      "tags": [
        "play-fn",
        "story",
      ],
      "title": "Example/Page",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaWindowApi 1`] = `
{
  "stories": [
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--primary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
            "type": {
              "name": "boolean",
            },
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "primary": true,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Primary",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--secondary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Secondary",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--large",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "large",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Large",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--small",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "small",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Small",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--masked",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--masked",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "lostpixel": {
          "mask": [
            {
              "selector": "a",
            },
          ],
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Masked",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaWindowApi StoryStore v7 1`] = `
{
  "stories": [
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--primary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
            "type": {
              "name": "boolean",
            },
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "primary": true,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "lostpixel": {
          "breakpoints": [
            420,
            1000,
          ],
          "extraShots": [
            {
              "args": {
                "label": "XXX",
              },
              "suffix": "with XXX label",
            },
            {
              "args": {
                "backgroundColor": "red",
                "label": "MMM",
                "primary": false,
              },
              "suffix": "with MMM label & red",
            },
          ],
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Primary",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--secondary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Secondary",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--large",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "large",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Large",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--small",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "small",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Small",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged Out",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaWindowApi StoryStore v7 2`] = `
{
  "stories": [
    {
      "id": "example-button--primary",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  args: {
    primary: true,
    label: 'Button'
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Button.stories.ts",
        "layout": "centered",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Primary",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  args: {
    label: 'Button'
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Button.stories.ts",
        "layout": "centered",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Secondary",
    },
    {
      "id": "example-button--large",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  args: {
    size: 'large',
    label: 'Button'
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Button.stories.ts",
        "layout": "centered",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Large",
    },
    {
      "id": "example-button--small",
      "importPath": "./src/stories/Button.stories.ts",
      "kind": "Example/Button",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  args: {
    size: 'small',
    label: 'Button'
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Button.stories.ts",
        "layout": "centered",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Small",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./src/stories/Header.stories.ts",
      "kind": "Example/Header",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  args: {
    user: {
      name: 'Jane Doe'
    }
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Header.stories.ts",
        "layout": "fullscreen",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Logged In",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./src/stories/Header.stories.ts",
      "kind": "Example/Header",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Header.stories.ts",
        "layout": "fullscreen",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./src/stories/Page.stories.ts",
      "kind": "Example/Page",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Page.stories.ts",
        "layout": "fullscreen",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./src/stories/Page.stories.ts",
      "kind": "Example/Page",
      "parameters": {
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/i,
          },
        },
        "docs": {
          "extractArgTypes": undefined,
          "extractComponentDescription": undefined,
          "renderer": undefined,
          "source": {
            "originalSource": "{
  play: async ({
    canvasElement
  }) => {
    const canvas = within(canvasElement);
    const loginButton = canvas.getByRole('button', {
      name: /Log in/i
    });
    await expect(loginButton).toBeInTheDocument();
    await userEvent.click(loginButton);
    await expect(loginButton).not.toBeInTheDocument();
    const logoutButton = canvas.getByRole('button', {
      name: /Log out/i
    });
    await expect(logoutButton).toBeInTheDocument();
  }
}",
          },
          "story": {
            "inline": true,
          },
        },
        "fileName": "./src/stories/Page.stories.ts",
        "layout": "fullscreen",
        "renderer": "react",
        "throwPlayFunctionExceptions": false,
      },
      "story": "Logged In",
    },
  ],
}
`;
